--- a/.github/workflows/small_tests.yml
+++ b/.github/workflows/small_tests.yml
@@ -9,6 +9,8 @@ jobs:
         uses: actions/checkout@v3 
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v1
+        with:
+            release: R2023a        
       - name: Install DVC
         run: |
             sudo wget https://dvc.org/deb/dvc.list -O /etc/apt/sources.list.d/dvc.list
@@ -22,4 +24,4 @@ jobs:
       - name: Run script
         uses: matlab-actions/run-command@v1
         with:
-          command: ./tests/small_tests
+          command: ./tests/run_small_tests
