Updated workflow command

--- a/.github/workflows/small_tests.yml
+++ b/.github/workflows/small_tests.yml
@@ -24,4 +24,4 @@ jobs:
       - name: Run script
         uses: matlab-actions/run-command@v1
         with:
-          command: ./tests/run_small_tests
+          command: cd 'tests', addpath("./../main/"),run_small_tests
