--- a/.github/workflows/small_tests.yml
+++ b/.github/workflows/small_tests.yml
@@ -20,6 +20,9 @@ jobs:
             sudo apt update
             sudo apt install dvc
       - name: Get small data files
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
         run: dvc pull tests/small_data
       - name: Show contents
         run: ls -a tests/small_data/
