Moved tests into a separate repo, included into this one as a submodule

--- a/.github/workflows/small_tests.yml
+++ b/.github/workflows/small_tests.yml
@@ -6,7 +6,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
-        uses: actions/checkout@v3 
+        uses: actions/checkout@v3
+      - name: Check out submodules
+        run: git submodule update --init --recursive
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v1
         with:
@@ -27,4 +29,4 @@ jobs:
       - name: Run script
         uses: matlab-actions/run-command@v1
         with:
-          command: cd 'tests', addpath("./../main/"), assertSuccess(run_small_tests)
+          command: cd '.submodules/tests', addpath("./../main/"), assertSuccess(run_small_tests)
