--- a/.github/workflows/small_tests.yml
+++ b/.github/workflows/small_tests.yml
@@ -25,7 +25,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-        run: dvc pull tests/small_data
+        run: dvc pull .submodules/tests/small_data
       - name: Run script
         uses: matlab-actions/run-command@v1
         with:
