--- a/.github/workflows/performance_tests.yml
+++ b/.github/workflows/performance_tests.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3 
       - name: Check out submodules
-        run: git submodule update --init --recursive
+        run: git submodule update --init --recursive; git submodule foreach git pull origin main;
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v1
         with:
