--- a/.github/workflows/performance_tests.yml
+++ b/.github/workflows/performance_tests.yml
@@ -6,9 +6,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
-        uses: actions/checkout@v3 
-      - name: Check out submodules
-        run: git submodule update --init --recursive; git submodule foreach git pull origin main;
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v1
         with:
