--- a/.github/workflows/small_tests.yml
+++ b/.github/workflows/small_tests.yml
@@ -7,8 +7,8 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
-      - name: Check out submodules
-        run: git submodule update --init --recursive; git submodule foreach git pull origin main;
+        with:
+          submodules: recursive
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v1
         with:
